# sol_wtf

./: .gitignore  README.md  docker-compose.FAKE.yml  docker-compose.FAKE_PROD.yml  docker-compose.PLAY.yml  docker-compose.yml
.ebextensions/: https_redirect.config  nginx-healthd.config
.elasticbeanstalk/: config.yml
.github/workflows/: deploy_app.yml  format_app.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  sqlx-data.json
backend/config/: base_config.yml  dev_config.yml  fake_prod_config.yml  prod_config.yml
backend/migrations/: 20210602063413_create_db.sql
backend/scripts/: boot.DEV.sh  boot.PROD.sh  init_db.sh  store_db_schema_offline.sh
backend/src/: config.rs  lib.rs  main.rs  startup.rs
backend/src/routes/: all_routes.rs  mod.rs
backend/src/twitter/: mod.rs
backend/src/twitter/core/: jobs.rs  loops.rs  mod.rs  processors.rs
backend/src/twitter/domain/: media.rs  tweet.rs  user.rs
backend/src/twitter/model/: media.rs  mod.rs  tweet.rs  user.rs
backend/src/twitter/routes/: mod.rs  provide.rs  pull.rs  serve.rs
backend/src/twitter/schedulers/: clokwerk_async.rs  clokwerk_sync.rs  clokwerk_thread.rs  mod.rs  tokio_async.rs
backend/src/twitter/scrapers/: general.rs  mod.rs  specific.rs  v2_api.rs
backend/src/utils/: constants.rs  errors.rs  general.rs  mod.rs  tracing.rs
deploy/: .terraform.lock.hcl  main.tf
eb/: docker-compose.yml
eb/.elasticbeanstalk/: config.yml
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  nginx.conf  package.json  tailwind.config.js  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  helpers.js  main.js
frontend/src/components/: Box.vue  HiddenDetails.vue  NavBar.vue  NavButton.vue  QuoteTweet.vue  RepliedToTweet.vue  Tweet.vue
frontend/src/router/: index.js
frontend/src/store/: store.js
frontend/src/views/: About.vue  Feed.vue  Home.vue  Tip.vue
nginx/: Dockerfile  nginx.conf
old/: Dockerfile.FAKE_PROD  Dockerfile.TRY1  Dockerfile.TRY2
temp/: docker-compose.yml
terraform/: bastion.tf  database.tf  dns.tf  docker-compose.TERRA.yml  eb.tf  ec2test.tf  main.tf  network.tf  outputs.tf  variables.tf
terraform/templates/bastion/: user-data.sh
