[package]
name = "backend"
version = "0.1.0"
authors = ["ilmoi"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.1"
actix-web = "4.0.0-beta.5"
chrono = "0.4.19"
config = "0.11.0"
env_logger = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
]
