[package]
name = "backend"
version = "0.1.0"
authors = ["ilmoi"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = { git = "https://github.com/near/actix-extras.git", rev = "9e3c0b8" }
actix-http = "3.0.0-beta.5"
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.5"

config = "0.11.0"
env_logger = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

chrono = "0.4.19"
uuid = { version = "0.8.1", features = ["v4"] }
derive_more = "0.99.14"
reqwest = { version = "0.11.3", features = ["json"] }
serde_url_params = "0.2.1"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
]

#[dependencies]
#actix-http = "3.0.0-beta.6"
#actix-service = "2.0.0-beta.6"
#actix-web = "4.0.0-beta.6"
#actix-cors = { git = "https://github.com/near/actix-extras.git", rev = "9e3c0b8" }
#serde = "1.0.115"
#config = { version = "0.10.1", default-features = false, features = ["yaml"] }
#sqlx = { version = "0.5.1", default-features = false, features = [ "json", "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
#uuid = { version = "0.8.1", features = ["v4"] }
#chrono = "0.4.15"
#reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
#tracing = "0.1.19"
#tracing-futures = "0.2.4"
#tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
#tracing-bunyan-formatter = "0.2.2"
#tracing-log = "0.1.1"
#thiserror = "1.0.24"
#serde-aux = "1.0.1"
#unicode-segmentation = "1.7.1"
#validator = "0.12.0"
#rand = { version = "0.8", features=["std_rng"] }
#sha2 = { version = "0.9" }
##tracing-actix-web = "0.4.0-beta.4"
#anyhow = "1.0.40"
#serde_json = "1.0.64"
#env_logger = "0.8.3"