[package]
name = "backend"
version = "0.1.0"
authors = ["ilmoi"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]

# ------------------------------------------------------------------------------ ACTIX
#needed to fix https://github.com/actix/actix-extras/issues/176
actix-cors = { git = "https://github.com/near/actix-extras.git", rev = "9e3c0b8" }
actix-http = "3.0.0-beta.5"
actix-service = "2.0.0-beta.5"
actix-web = "4.0.0-beta.6"

# ------------------------------------------------------------------------------ TRACING
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.1"

# ------------------------------------------------------------------------------ ASYNC
futures = "0.3.15"
async-recursion = "0.3.2"
tokio = { version = "1.6.1", features = ["macros"] }

# ------------------------------------------------------------------------------ OTHER
config = "0.11.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_url_params = "0.2.1"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
#derive_more = "0.99.14"
reqwest = { version = "0.11.3", features = ["json"] }
#clokwerk = "0.4.0-rc1"
#redis = "0.20.1"

# --------------------------------------------------------------------------------- SQLX
[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "json",
    "offline",
]
